test/libsolidity/syntaxTests/types/global_struct_recursive.sol
struct s1 { s2 x; }
struct s2 { s1 y; }

contract C {
    // whatever
}
// ----
// TypeError: (0-19): Recursive struct definition.
